--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -76,3 +76,14 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_stargazers: yes
+  metrics-history:
+    runs-on: ubuntu-latest
+    steps:
+      - name: History
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.calendar.full.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
