--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
         {
             "source": "/stargazers",
             "destination": "metrics.plugin.stargazers.svg"
+        },
+        {
+            "source": "/history",
+            "destination": "metrics.plugin.calendar.full.svg"
         }
     ]
 }
