--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,7 +5,7 @@ on:
   schedule: [{cron: "0 0,12 * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  # push: {branches: ["master", "main"]}
 
 jobs:
   metrics-rss:
